--- a/package.json
+++ b/package.json
@@ -3,16 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fluentui/react": "^8.119.0",
+    "@reduxjs/toolkit": "^2.2.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/lodash": "^4.17.6",
     "@types/node": "^16.18.101",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "axios": "^1.7.2",
+    "crypto-js": "^4.2.0",
+    "dompurify": "^3.1.5",
+    "lodash": "^4.17.21",
+    "mobx": "^6.13.0",
+    "mobx-react-lite": "^4.0.7",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "react-modern-drawer": "^1.3.1",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
+    "react-tooltip": "^5.27.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
